updated sign in page and language doc

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,8 @@
     "facebook": "Facebook",
     "google": "Google",
     "ok": "Ok",
+    "password":"Password",
+    "enter_password": "Enter Password",
     "cancel": "Cancel",
     "you_are_not_registered_yet": "You're not registered yet",
     "sign_up_now": "Sign up Now",
